SERVER-4781 If in initial replication, allow a non-strict mod applying policy.