src/mongo/db/ops/update_internal.h
@@ -45,13 +45,19 @@ namespace mongo {
         const char* fieldName;
         const char* shortFieldName;
 
+        // Detemines if this mod must absoluetly be applied. In some replication scenarios, a
+        // failed apply of a mod does not constitute an error. In those cases, setting strict
+        // to off would not throw errors.
+        bool strictApply;
+
         BSONElement elt; // x:5 note: this is the actual element from the updateobj
         boost::shared_ptr<Matcher> matcher;
         bool matcherOnPrimitive;
 
-        void init( Op o , BSONElement& e ) {
+        void init( Op o , BSONElement& e , bool forReplication ) {
             op = o;
             elt = e;
+            strictApply = !forReplication;
             if ( op == PULL && e.type() == Object ) {
                 BSONObj t = e.embeddedObject();
                 if ( t.firstElement().getGtLtOp() == 0 ) {
@@ -331,7 +337,8 @@ namespace mongo {
 
         ModSet( const BSONObj& from,
                 const set<string>& idxKeys = set<string>(),
-                const set<string>* backgroundKeys = 0 );
+                const set<string>* backgroundKeys = 0,
+                bool forReplication = false );
 
         /**
          * re-check if this mod is impacted by indexes
